feat: Add render.yaml for CI/CD

--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -23,4 +23,11 @@
         android:textSize="20sp"
         tools:text="$999.99" />
 
+    <Button
+        android:id="@+id/addToCartButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="Add to Cart" />
+
 </LinearLayout>
