--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Theme.TaobaoClone" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Base.Theme.TaobaoClone" parent="Theme.Material3.DayNight.NoActionBar">
     </style>
+
+    <style name="Theme.TaobaoClone" parent="Base.Theme.TaobaoClone" />
 </resources>
